# khal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/cargo-cuda/: Cargo.toml
crates/cargo-cuda/src/: main.rs
crates/khal/: Cargo.toml  README.md
crates/khal-builder/: Cargo.toml
crates/khal-builder/src/: lib.rs
crates/khal-derive/: Cargo.toml
crates/khal-derive/src/: lib.rs  shader.rs  shader_args.rs
crates/khal-derive/src/spirv_bindgen/: cpu.rs  cuda.rs  mod.rs
crates/khal-example/: Cargo.toml  build.rs
crates/khal-example-shaders/: Cargo.toml  build.rs
crates/khal-example-shaders/src/: lib.rs
crates/khal-example/shaders-spirv/: add_assign.spv  manifest.json
crates/khal-example/src/: main.rs
crates/khal-std/: Cargo.toml
crates/khal-std/src/: float.rs  index.rs  iter.rs  lib.rs  macros.rs  memory.rs  num_traits.rs
crates/khal-std/src/arch/: cpu.rs  cuda.rs  mod.rs
crates/khal-std/src/sync/: atomics.rs  barriers.rs  mod.rs  subgroup.rs
crates/khal/src/: function.rs  lib.rs  shader.rs
crates/khal/src/backend/: any_backend.rs  cuda.rs  mod.rs  webgpu.rs
